aacdec: Fix Sound fragments after seeking Fixes Ticket420

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>